--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "node-telegram-bot-api": "^0.61.0",
+    "crypto": "^1.0.1",
     "nodemon": "^2.0.20",
-    "randomstring": "^1.2.3"
+    "telegraf": "^4.11.2"
   }
 }
